# openai-fitness

./: README.md  client.py  pyproject.toml
backend/: README.md  pyproject.toml
backend/backend/: main.py  settings.py
backend/backend/openai/: service.py
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/app/: FitnessForm.tsx  FormTextField.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/api/workout/: route.ts
